--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "author": "RynerNO",
   "license": "MIT",
   "scripts": {
-    "dev:serve": "webpack-dev-server --config webpack.dev.js",
-    "prod:build": "webpack --config webpack.prod.js"
+    "dev:serve": "cross-env DEBUG=Sync-Reader:* nodemon --ignore './dist/public/' --exec babel-node src/server/app.js --progress",
+    "dev:build": "cross-env NODE_ENV=development webpack --config webpack.dev.js",
+    "prod:build": "cross-env NODE_ENV=production webpack --config webpack.prod.js"
   },
   "dependencies": {
     "vue": "^2.6.11",
@@ -14,17 +15,21 @@
   },
   "devDependencies": {
     "@babel/core": "^7.10.5",
+    "@babel/node": "^7.10.5",
     "@babel/plugin-transform-runtime": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
     "autoprefixer": "^9.8.5",
     "babel-loader": "^8.1.0",
     "babel-plugin-module-resolver": "^4.0.0",
+    "body-parser": "^1.19.0",
     "css-loader": "^3.6.0",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "fibers": "^5.0.0",
     "file-loader": "^6.0.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
+    "nodemon": "^2.0.4",
     "postcss-loader": "^3.0.0",
     "pug": "^3.0.0",
     "pug-plain-loader": "^1.0.0",
@@ -37,7 +42,7 @@
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.44.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
+    "webpack-hot-middleware": "^2.25.0",
     "webpack-merge": "^5.0.9"
   }
 }
